Continue with google
commit 8c578e8b6769bb3c4dd02be76f7896983e636cbf
Author: Diego Araujo <97152724+diegoarauj0@users.noreply.github.com>
Date:   Sat Mar 8 02:15:52 2025 -0300

    Logout

commit b6e27a9a57e108f430033e6592111af56c3e9de2
Author: Diego Araujo <97152724+diegoarauj0@users.noreply.github.com>
Date:   Fri Mar 7 21:03:59 2025 -0300

    GoogleAuthenticationController

commit bebdff32f94609fed54ffe0f3f0b875755caab44
Author: Diego Araujo <97152724+diegoarauj0@users.noreply.github.com>
Date:   Fri Mar 7 19:29:28 2025 -0300

    Alterando o AuthenticationController

--- a/views/layouts/authentication.handlebars
+++ b/views/layouts/authentication.handlebars
@@ -8,7 +8,12 @@
 <body>
   <main>
     <section>
-      {{{body}}}
+      <div>
+        {{{body}}}
+      </div>
+      <div>
+        <a href="/authentication/google">Continue with google</a>
+      </div>
     </section>
   </main>
 </body>
