--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,4 @@
-<form action="/auth/register" method="post" autocomplete="on">
+<form action="/authentication/register" method="post" autocomplete="on">
   <div>
     {{#if errors.body.username}}
       <div class="error"><p>{{errors.body.username.message}}</p></div>
@@ -24,5 +24,5 @@
   </div>
 
   <button type="submit">Register</button>
-  <a href="/auth/login">login</a>
+  <a href="/authentication/login">login</a>
 </form>
